package promocje;
import koszyk.Koszyk;

public interface Promotion {
    public void applyPromo(Koszyk k);
}
